--- a/assets/src/scss/custom_bootstrap.scss
+++ b/assets/src/scss/custom_bootstrap.scss
@@ -25,14 +25,14 @@ $variable-prefix: codess- !default;
  @import "~bootstrap/scss/alert";
  @import "~bootstrap/scss/type";
 //@import "~bootstrap/scss/images";
-//@import "~bootstrap/scss/containers";
+@import "~bootstrap/scss/containers";
 //@import "~bootstrap/scss/tables";
 //@import "~bootstrap/scss/transitions";
 //@import "~bootstrap/scss/button-group";
 //@import "~bootstrap/scss/nav";
 //@import "~bootstrap/scss/navbar";
  @import "~bootstrap/scss/card";
-//@import "~bootstrap/scss/accordion";
+@import "~bootstrap/scss/accordion";
 //@import "~bootstrap/scss/breadcrumb";
 //@import "~bootstrap/scss/pagination";
 //@import "~bootstrap/scss/badge";
@@ -53,4 +53,36 @@ $variable-prefix: codess- !default;
  // Utilities
  @import "~bootstrap/scss/utilities/api";
 
+ // used to overwrite theme body tag
+ font-family: var(--#{$prefix}body-font-family);
+ @include font-size(var(--#{$prefix}body-font-size));
+ font-weight: var(--#{$prefix}body-font-weight);
+ line-height: var(--#{$prefix}body-line-height);
+ color: var(--#{$prefix}body-color);
+ text-align: var(--#{$prefix}body-text-align);
+ -webkit-text-size-adjust: 100%; // 3
+ -webkit-tap-highlight-color: rgba($black, 0); // 4
+
+ //custom
+ #codess-issue-modal {
+  box-shadow: black 0px 0px 15px;
+ }
+
+ .accordion-button:not(.collapsed) {
+  background-color: #ffbbbb;
+  color: black;
+ }
+ .accordion-button.collapsed {
+  background-color: #ffbbbb;
+ }
+ .accordion-body {
+  display: none;
+ }
+ .show .accordion-body {
+  display: block;
+ }
+ .form_reuqired_asterisk:after {
+  content: ' *';
+  color: red;
+ }
 }
