added icon for the admin toolbar and used same icon throughout the plugin

--- a/assets/src/scss/custom_styles.scss
+++ b/assets/src/scss/custom_styles.scss
@@ -1,1 +1,8 @@
 // add custom scss styling here
+
+// Displays the button for adding a new issue on mobile
+@media screen and (max-width: 782px) {
+  #wpadminbar li#wp-admin-bar-codess-github-issue-creator-adminbar-btn {
+    display: block;
+  }
+}
