--- a/assets/css/custom_styles.css
+++ b/assets/css/custom_styles.css
@@ -1,1 +1,5 @@
-
+@media screen and (max-width: 782px) {
+  #wpadminbar li#wp-admin-bar-codess-github-issue-creator-adminbar-btn {
+    display: block;
+  }
+}
